--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,11 @@
+$primaryBtn: rgb(240, 79, 79);
+
+
 header {
     background-color:  lightblue;
     display: flex;
+}
+
+.hero {
+    color: $primaryBtn;
 }
