--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,14 @@
 header {
   background-color: lightblue;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
 .hero {
   color: #f04f4f;
 }
+
+.main {
+  background-color: green;
+}
+
 /*# sourceMappingURL=style.css.map */
