--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,5 @@
 $primaryBtn: rgb(240, 79, 79);
-
+$Color : green;
 
 header {
     background-color:  lightblue;
@@ -9,3 +9,7 @@ header {
 .hero {
     color: $primaryBtn;
 }
+
+.main {
+    background-color: $Color;
+} 
